# trakt_aiohttp

./: .travis.yml  Readme.rst  setup.cfg  tox.ini
tests/unit/: test_methods.py
trakt_aiohttp/: __init__.py  aiohttp_device.py
