[metadata]
name = trakt_aiohttp
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Watch tv directly from your command line :tv:
description-file = Readme.rst
home-page = http://github.com/XayOn/trakt_aiohttp
license = GPL3+
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Information Technology
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    trakt

[files]
packages =
    trakt_aiohttp
