[metadata]
name = trakt_aiohttp
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Trakt.tv python3.5+ library
description-file = Readme.rst
home-page = http://github.com/XayOn/trakt_aiohttp
license = GPL3+
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Information Technology
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    trakt

[files]
packages =
    trakt_aiohttp
